# django-profileboard

./: .bumpversion.cfg  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: jekyll-gh-pages.yml
docs/: index.md
src/django_profileboard/: consumers.py  middleware.py  models.py  routing.py  signals.py  urls.py  utils.py  views.py
src/django_profileboard/migrations/: 0001_initial.py  0002_alter_databasequery_params_and_more.py
src/django_profileboard/templates/profileboard/: dashboard.html
